--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-config-next": "13.4.6",
     "lucide-react": "^0.252.0",
     "next": "13.4.6",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "prisma": "^4.16.1",
     "react": "18.2.0",
