--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
-    "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
@@ -35,16 +34,19 @@
     "lucide-react": "^0.252.0",
     "next": "13.4.6",
     "next-auth": "^4.22.1",
-    "postcss": "8.4.24",
     "prisma": "^4.16.1",
     "react": "18.2.0",
     "react-day-picker": "^8.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.0",
     "tailwind-merge": "^1.13.2",
-    "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.3",
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3"
   }
 }
